--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>backbone-marionette</artifactId>
-    <version>1.0.0-beta7-1-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>Backbone.Marionette</name>
     <description>WebJar for Backbone.Marionette</description>
     <url>http://webjars.org</url>
@@ -41,7 +41,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>1.0.0-beta6</upstreamVersion>
+        <upstreamVersion>1.1.0</upstreamVersion>
         <downloadUrl>https://raw.github.com/marionettejs/backbone.marionette/v${upstreamVersion}/lib</downloadUrl>
         <destinationDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destinationDir>
     </properties>
