--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,24 @@
         <upstreamVersion>2.0.1</upstreamVersion>
         <downloadUrl>https://raw.github.com/marionettejs/backbone.marionette/v${upstreamVersion}/lib</downloadUrl>
         <destinationDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destinationDir>
+        <requirejs>
+            {
+                "paths": {
+                    "backbone-marionette": "backbone.marionette"
+                },
+                "shim": {
+                    "backbone-marionette": [
+                        "json2",
+                        "jquery",
+                        "underscore",
+                        "backbone",
+                        "backbone-eventbinder",
+                        "backbone-wreqr",
+                        "backbone-babysitter"
+                    ]
+                }
+            }
+        </requirejs>
     </properties>
 
     <dependencies>
