--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>backbone-marionette</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.0.3</version>
     <name>Backbone.Marionette</name>
     <description>WebJar for Backbone.Marionette</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/backbone-marionette</url>
         <connection>scm:git:https://github.com/webjars/backbone-marionette.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/backbone-marionette.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>backbone-marionette-2.0.3</tag>
     </scm>
 
     <developers>
