--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>7</version>
     </parent>
 
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <groupId>org.webjars</groupId>
-    <artifactId>backbone-marionette</artifactId>
-    <version>2.0.4-SNAPSHOT</version>
-    <name>Backbone.Marionette</name>
+    <artifactId>backbone-marionette-parent</artifactId>
+    <version>2.4.0-SNAPSHOT</version>
+    <name>Backbone.Marionette Parent</name>
     <description>WebJar for Backbone.Marionette</description>
     <url>http://webjars.org</url>
 
@@ -41,96 +41,18 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>2.0.3</upstreamVersion>
-        <downloadUrl>https://raw.github.com/marionettejs/backbone.marionette/v${upstreamVersion}/lib</downloadUrl>
+        <upstreamVersion>2.4.0</upstreamVersion>
+        <downloadUrl>https://raw.githubusercontent.com/marionettejs/backbone.marionette/v${upstreamVersion}/lib</downloadUrl>
         <destinationDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destinationDir>
-        <requirejs>
-            {
-                "paths": {
-                    "backbone-marionette": "backbone.marionette"
-                },
-                "shim": {
-                    "backbone-marionette": [
-                        "json2",
-                        "jquery",
-                        "underscore",
-                        "backbone",
-                        "backbone-eventbinder",
-                        "backbone-wreqr",
-                        "backbone-babysitter"
-                    ]
-                }
-            }
-        </requirejs>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>json2</artifactId>
-            <version>20110223</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-            <version>1.8.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>underscorejs</artifactId>
-            <version>1.4.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>backbonejs</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>backbone-eventbinder</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>backbone-wreqr</artifactId>
-            <version>0.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>backbone-babysitter</artifactId>
-            <version>0.0.3</version>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>core</module>
+        <module>main</module>
+    </modules>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>wagon-maven-plugin</artifactId>
-                <version>1.0-beta-4</version>
-                <executions>
-                    <execution>
-                        <id>download-js</id>
-                        <phase>process-resources</phase>
-                        <goals><goal>download-single</goal></goals>
-                        <configuration>
-                            <url>${downloadUrl}</url>
-                            <fromFile>backbone.marionette.js</fromFile>
-                            <toDir>${destinationDir}</toDir>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>download-min-js</id>
-                        <phase>process-resources</phase>
-                        <goals><goal>download-single</goal></goals>
-                        <configuration>
-                            <url>${downloadUrl}</url>
-                            <fromFile>backbone.marionette.min.js</fromFile>
-                            <toDir>${destinationDir}</toDir>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
@@ -148,12 +70,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources</directory>
-                <targetPath>${destinationDir}</targetPath>
-            </resource>
-        </resources>
     </build>
 
 </project>
