--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>pom</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>backbone-marionette-parent</artifactId>
-    <version>2.4.0</version>
+    <version>2.4.1-SNAPSHOT</version>
     <name>Backbone.Marionette Parent</name>
     <description>WebJar for Backbone.Marionette</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/backbone-marionette</url>
         <connection>scm:git:https://github.com/webjars/backbone-marionette.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/backbone-marionette.git</developerConnection>
-        <tag>backbone-marionette-parent-2.4.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
